<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_upcoming_matches"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#e9edcb"
        android:gravity="center_horizontal|center_vertical"
        android:text="Old Matches"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_player_bio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_old_matches"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_old_matches"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#aeeae6"
        android:gravity="center_horizontal|center_vertical"
        android:text="Upcoming Matches"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_player_finder"
        app:layout_constraintLeft_toRightOf="@id/tv_upcoming_matches"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_bio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f6c1b9"
        android:gravity="center_horizontal|center_vertical"
        android:text="Player Bio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_player_finder"
        app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_matches" />

    <TextView
        android:id="@+id/tv_player_finder"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#a4a9a7"
        android:gravity="center_horizontal|center_vertical"
        android:text="Player Finder"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_player_bio"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
